[package]
name = "donut-planet"
version = "0.2.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
clap = { version = "4.5.47", features = ["derive"] }
globset = "0.4.18"
image = "0.25.8"
minijinja = { version = "2.12.0", features = ["loader"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
toml = "0.9.5"
tower-http = { version = "0.6.6", features = ["fs"] }
walkdir = "2.5.0"
